放入slvs下載連結壓縮檔案

--- a/config/content.htm
+++ b/config/content.htm
@@ -43,11 +43,11 @@
 <p><span>網路(google):</span></p>
 <p><span><a href="https://blog.csdn.net/gitblog_00264/article/details/141452063">分析solvespaces的職場功用和能力</a></span></p>
 <h2>w7</h2>
-<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面</span>:</p>
-<p><span>①</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/%E7%B7%B4%E7%BF%92.html">練習</a></p>
-<p><span>②</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Base%20Plate.html">Base Plate</a></p>
-<p><span>③</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20A.html">Bearing block A</a></p>
-<p><span>④</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20B.html">Bearing block B</a></p>
+<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面           </span></p>
+<p><span>①</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/%E7%B7%B4%E7%BF%92.html">練習</a>                                     </p>
+<p><span>②</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Base%20Plate.html">Base Plate</a>                             </p>
+<p><span>③</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20A.html">Bearing block A</a>                     </p>
+<p><span>④</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20B.html">Bearing block B</a>                     </p>
 <p><span>⑤</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20bracket.html">Dovetail bracket</a></p>
 <p><span>⑥</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20stop.html">Dovetail stop</a></p>
 <p><span>⑦</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland%20blank.html">Gland blank</a></p>
@@ -65,8 +65,8 @@
 <p>6.若成功之後在新分頁輸入如下修改小部分即可開啟:<a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl"></a></p>
 <p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
 <p>7.開啟老師給html的程式碼並且在裡面如上面修改成自己的html網站網址，把code放置在自己網站中即可完成。</p>
-<p></p>
-<h3>練習</h3>
+<p></p><h3>練習</h3>
+<p>下載:<a href="/downloads/41223131_part1.zip">/downloads/41223131_part1.zip</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
 <p></p>
@@ -166,9 +166,8 @@ var viewer3d;
     }
     openByGet();
 </script>
-</p>
-<h3>Base Plate</h3>
-<p></p>
+</p><h3>Base Plate</h3>
+<p>下載:<a href="/downloads/41223131_Base plate.zip">/downloads/41223131_Base plate.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part15.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -266,9 +265,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Bearing block A</h3>
-<p></p>
+</script><h3>Bearing block A</h3>
+<p>下載:<a href="/downloads/41223131_Bearing black A.zip">/downloads/41223131_Bearing black A.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part4-1.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -366,8 +364,9 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Bearing block B</h3>
+</script><h3>Bearing block B</h3>
+<p></p>
+<p>下載:<a href="/downloads/41223131_Bearing black B.zip">/downloads/41223131_Bearing black B.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part3.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -457,7 +456,7 @@ function initModelParts() {
         'https://www.youtube.com/embed/avPmO_3cq-Q', // 第一題的影片
     ];
     
-    var titles = ['Bearing block B']; // 題目標題
+    var titles = ['Base Plate']; // 題目標題
     
     links.forEach(function(link, index) {
         createModelPart(index + 1, link.href, ytLinks[index % ytLinks.length], titles[index]); // 將標題傳遞進去
@@ -465,9 +464,9 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Dovetail bracket</h3>
+</script><h3>Dovetail bracket</h3>
 <p></p>
+<p>下載:<a href="/downloads/41223131_Dovetail bracket.zip">/downloads/41223131_Dovetail bracket.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part5.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -565,13 +564,12 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Dovetail stop</h3>
+</script><h3>Dovetail stop</h3>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part6.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1"></div>
+<div id="modelParts1">下載:<a href="/downloads/41223131_Dovetail stop.zip">/downloads/41223131_Dovetail stop.zip</a></div>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url, ytUrl, title) {
@@ -664,9 +662,9 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Gland blank</h3>
+</script><h3>Gland blank</h3>
 <p></p>
+<p>下載:<a href="/downloads/41223131_Gland blank.zip">/downloads/41223131_Gland blank.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part7.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -764,8 +762,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Gland</h3>
+</script><h3>Gland</h3>
+<p>下載:<a href="/downloads/41223131_Gland.zip">/downloads/41223131_Gland.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part10.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -863,8 +861,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Giude plate</h3>
+</script><h3>Giude plate</h3>
+<p>下載:<a href="/downloads/41223131_Guide plate.zip">/downloads/41223131_Guide plate.zip</a></p>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -963,8 +961,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Head attachment</h3>
+</script><h3>Head attachment</h3>
+<p>下載連結:<a href="/downloads/41223131_Head attachment.zip">/downloads/41223131_Head attachment.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part14.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -1062,8 +1060,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Head yoke</h3>
+</script><h3>Head yoke</h3>
+<p>下載:<a href="/downloads/41223131_Head yoke.zip">/downloads/41223131_Head yoke.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part11.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -1161,8 +1159,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h2>w9</h2>
+</script><h2>w9</h2>
 <p>1.打期中自評成績</p>
 <p>2.分析NX的在職場發展與作用</p>
 <p>ChatGPT:</p>
