--- a/content/Dovetail stop.html
+++ b/content/Dovetail stop.html
@@ -146,7 +146,7 @@ img.add_border {
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part6.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1"></div>
+<div id="modelParts1">下載:<a href="./../downloads/41223131_Dovetail stop.zip">/downloads/41223131_Dovetail stop.zip</a></div>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url, ytUrl, title) {
@@ -239,8 +239,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Dovetail bracket << <a href='Dovetail bracket.html'>Previous</a> <a href='Gland blank.html'>Next</a> >> Gland blank</div>
+</script><br />Dovetail bracket << <a href='Dovetail bracket.html'>Previous</a> <a href='Gland blank.html'>Next</a> >> Gland blank</div>
         
     <!-- footer -->
       <div class="container">
