--- a/content/Bearing block A.html
+++ b/content/Bearing block A.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Base Plate << <a href='Base Plate.html'>Previous</a> <a href='Bearing block B.html'>Next</a> >> Bearing block B<br /><h1>Bearing block A</h1>
-<p></p>
+<p>下載:<a href="./../downloads/41223131_Bearing black A.zip">/downloads/41223131_Bearing black A.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part4-1.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -240,8 +240,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Base Plate << <a href='Base Plate.html'>Previous</a> <a href='Bearing block B.html'>Next</a> >> Bearing block B</div>
+</script><br />Base Plate << <a href='Base Plate.html'>Previous</a> <a href='Bearing block B.html'>Next</a> >> Bearing block B</div>
         
     <!-- footer -->
       <div class="container">
