--- a/content/Dovetail bracket.html
+++ b/content/Dovetail bracket.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Bearing block B << <a href='Bearing block B.html'>Previous</a> <a href='Dovetail stop.html'>Next</a> >> Dovetail stop<br /><h1>Dovetail bracket</h1>
 <p></p>
+<p>下載:<a href="./../downloads/41223131_Dovetail bracket.zip">/downloads/41223131_Dovetail bracket.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part5.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -240,8 +241,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Bearing block B << <a href='Bearing block B.html'>Previous</a> <a href='Dovetail stop.html'>Next</a> >> Dovetail stop</div>
+</script><br />Bearing block B << <a href='Bearing block B.html'>Previous</a> <a href='Dovetail stop.html'>Next</a> >> Dovetail stop</div>
         
     <!-- footer -->
       <div class="container">
