--- a/content/Giude plate.html
+++ b/content/Giude plate.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Gland << <a href='Gland.html'>Previous</a> <a href='Head attachment.html'>Next</a> >> Head attachment<br /><h1>Giude plate</h1>
+<p>下載:<a href="./../downloads/41223131_Guide plate.zip">/downloads/41223131_Guide plate.zip</a></p>
 <p></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -240,8 +241,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Gland << <a href='Gland.html'>Previous</a> <a href='Head attachment.html'>Next</a> >> Head attachment</div>
+</script><br />Gland << <a href='Gland.html'>Previous</a> <a href='Head attachment.html'>Next</a> >> Head attachment</div>
         
     <!-- footer -->
       <div class="container">
