--- a/content/Gland blank.html
+++ b/content/Gland blank.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Dovetail stop << <a href='Dovetail stop.html'>Previous</a> <a href='Gland.html'>Next</a> >> Gland<br /><h1>Gland blank</h1>
 <p></p>
+<p>下載:<a href="./../downloads/41223131_Gland blank.zip">/downloads/41223131_Gland blank.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part7.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -240,8 +241,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Dovetail stop << <a href='Dovetail stop.html'>Previous</a> <a href='Gland.html'>Next</a> >> Gland</div>
+</script><br />Dovetail stop << <a href='Dovetail stop.html'>Previous</a> <a href='Gland.html'>Next</a> >> Gland</div>
         
     <!-- footer -->
       <div class="container">
