--- a/content/Gland.html
+++ b/content/Gland.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Gland blank << <a href='Gland blank.html'>Previous</a> <a href='Giude plate.html'>Next</a> >> Giude plate<br /><h1>Gland</h1>
+<p>下載:<a href="./../downloads/41223131_Gland.zip">/downloads/41223131_Gland.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part10.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -239,8 +240,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Gland blank << <a href='Gland blank.html'>Previous</a> <a href='Giude plate.html'>Next</a> >> Giude plate</div>
+</script><br />Gland blank << <a href='Gland blank.html'>Previous</a> <a href='Giude plate.html'>Next</a> >> Giude plate</div>
         
     <!-- footer -->
       <div class="container">
