--- a/content/Head attachment.html
+++ b/content/Head attachment.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Giude plate << <a href='Giude plate.html'>Previous</a> <a href='Head yoke.html'>Next</a> >> Head yoke<br /><h1>Head attachment</h1>
+<p>下載連結:<a href="./../downloads/41223131_Head attachment.zip">/downloads/41223131_Head attachment.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part14.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -239,8 +240,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Giude plate << <a href='Giude plate.html'>Previous</a> <a href='Head yoke.html'>Next</a> >> Head yoke</div>
+</script><br />Giude plate << <a href='Giude plate.html'>Previous</a> <a href='Head yoke.html'>Next</a> >> Head yoke</div>
         
     <!-- footer -->
       <div class="container">
