--- a/content/Head yoke.html
+++ b/content/Head yoke.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Head attachment << <a href='Head attachment.html'>Previous</a> <a href='w9.html'>Next</a> >> w9<br /><h1>Head yoke</h1>
+<p>下載:<a href="./../downloads/41223131_Head yoke.zip">/downloads/41223131_Head yoke.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part11.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -239,8 +240,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />Head attachment << <a href='Head attachment.html'>Previous</a> <a href='w9.html'>Next</a> >> w9</div>
+</script><br />Head attachment << <a href='Head attachment.html'>Previous</a> <a href='w9.html'>Next</a> >> w9</div>
         
     <!-- footer -->
       <div class="container">
