--- a/content/練習.html
+++ b/content/練習.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='Base Plate.html'>Next</a> >> Base Plate<br /><h1>練習</h1>
+<p>下載:<a href="./../downloads/41223131_part1.zip">/downloads/41223131_part1.zip</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
 <p></p>
@@ -241,8 +242,7 @@ var viewer3d;
     }
     openByGet();
 </script>
-</p>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='Base Plate.html'>Next</a> >> Base Plate</div>
+</p><br />w7 << <a href='w7.html'>Previous</a> <a href='Base Plate.html'>Next</a> >> Base Plate</div>
         
     <!-- footer -->
       <div class="container">
