--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -167,7 +167,7 @@ var viewer3d;
     openByGet();
 </script>
 </p><h3>Base Plate</h3>
-<p></p>
+<p>下載:<a href="/downloads/41223131_Base plate.zip">/downloads/41223131_Base plate.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part15.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -265,8 +265,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>Bearing block A</h3>
+</script><h3>Bearing block A</h3>
 <p>下載:<a href="/downloads/41223131_Bearing black A.zip">/downloads/41223131_Bearing black A.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
