--- a/content/w7.html
+++ b/content/w7.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習<br /><h1>w7</h1>
-<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面           </span></p>
+<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面(下載的部分是slvs檔需解壓縮)           </span></p>
 <p><span>①</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/%E7%B7%B4%E7%BF%92.html">練習</a>                                     </p>
 <p><span>②</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Base%20Plate.html">Base Plate</a>                             </p>
 <p><span>③</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20A.html">Bearing block A</a>                     </p>
