--- a/config/content.htm
+++ b/config/content.htm
@@ -1176,6 +1176,13 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>w11_hw</h2>
 <p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
 <p>我的影片網站連結:<a href="https://mdecad2024.github.io/hw-yuhao-08/content/W11%E5%BD%B1%E7%89%87%E9%80%A3%E7%B5%90.html">41223131</a></p>
+<p>零件檔下載:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a> (<span>Plongeur Batteur_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a>  (<span>Piece composite_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a>  (<span>Piece métalique gauche_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a>  (<span>Plastique Flipper_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a>  (<span>Support Bobine_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a>  (<span>Platine Batteur_sldprt.prt)</span></p>
+<p>              <a href="/downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a>   (<span>Flipper_sldprt.prt)</span></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_p1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p2.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p3.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p4.stl">模型4</a> <!-- 第四題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p5.stl">模型5</a> <!-- 第五題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p6.stl">模型6</a> <!-- 第六題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p7.stl">模型7</a> <!-- 第七題的模型 --></div>
@@ -1243,8 +1250,7 @@ function initModelParts() {
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
 <p></p>
-<p></p>
-<h3>W11影片連結</h3>
+<p></p><h3>W11影片連結</h3>
 <p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe></p>
 <p>Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe></p>
 <p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
