--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -65,7 +65,8 @@
 <p>6.若成功之後在新分頁輸入如下修改小部分即可開啟:<a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl"></a></p>
 <p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
 <p>7.開啟老師給html的程式碼並且在裡面如上面修改成自己的html網站網址，把code放置在自己網站中即可完成。</p>
-<p></p><h3>練習</h3>
+<p></p>
+<h3>練習</h3>
 <p>下載:<a href="/downloads/41223131_part1.zip">/downloads/41223131_part1.zip</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
@@ -166,7 +167,8 @@ var viewer3d;
     }
     openByGet();
 </script>
-</p><h3>Base Plate</h3>
+</p>
+<h3>Base Plate</h3>
 <p>下載:<a href="/downloads/41223131_Base plate.zip">/downloads/41223131_Base plate.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -265,7 +267,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Bearing block A</h3>
+</script>
+<h3>Bearing block A</h3>
 <p>下載:<a href="/downloads/41223131_Bearing black A.zip">/downloads/41223131_Bearing black A.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -364,7 +367,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Bearing block B</h3>
+</script>
+<h3>Bearing block B</h3>
 <p></p>
 <p>下載:<a href="/downloads/41223131_Bearing black B.zip">/downloads/41223131_Bearing black B.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
@@ -464,7 +468,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Dovetail bracket</h3>
+</script>
+<h3>Dovetail bracket</h3>
 <p></p>
 <p>下載:<a href="/downloads/41223131_Dovetail bracket.zip">/downloads/41223131_Dovetail bracket.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
@@ -564,7 +569,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Dovetail stop</h3>
+</script>
+<h3>Dovetail stop</h3>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part6.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -662,7 +668,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Gland blank</h3>
+</script>
+<h3>Gland blank</h3>
 <p></p>
 <p>下載:<a href="/downloads/41223131_Gland blank.zip">/downloads/41223131_Gland blank.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
@@ -762,7 +769,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Gland</h3>
+</script>
+<h3>Gland</h3>
 <p>下載:<a href="/downloads/41223131_Gland.zip">/downloads/41223131_Gland.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -861,7 +869,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Giude plate</h3>
+</script>
+<h3>Giude plate</h3>
 <p>下載:<a href="/downloads/41223131_Guide plate.zip">/downloads/41223131_Guide plate.zip</a></p>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
@@ -961,7 +970,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Head attachment</h3>
+</script>
+<h3>Head attachment</h3>
 <p>下載連結:<a href="/downloads/41223131_Head attachment.zip">/downloads/41223131_Head attachment.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -1060,7 +1070,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h3>Head yoke</h3>
+</script>
+<h3>Head yoke</h3>
 <p>下載:<a href="/downloads/41223131_Head yoke.zip">/downloads/41223131_Head yoke.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -1159,7 +1170,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h2>w9</h2>
+</script>
+<h2>w9</h2>
 <p>1.打期中自評成績</p>
 <p>2.分析NX的在職場發展與作用</p>
 <p>ChatGPT:</p>
@@ -1176,13 +1188,13 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>w11_hw</h2>
 <p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
 <p>我的影片網站連結:<a href="https://mdecad2024.github.io/hw-yuhao-08/content/W11%E5%BD%B1%E7%89%87%E9%80%A3%E7%B5%90.html">41223131</a></p>
-<p>零件檔下載:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
-<p>               <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
-<p>               <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a></p>
-<p>               <a href="/downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a></p>
-<p>               <a href="/downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a></p>
-<p>               <a href="/downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a></p>
-<p>              <a href="/downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a></p>
+<p>零件檔下載:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a> (<span>Plongeur Batteur_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a>  (<span>Piece composite_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a>  (<span>Piece métalique gauche_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a>  (<span>Plastique Flipper_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a>  (<span>Support Bobine_sldprt.prt)</span></p>
+<p>               <a href="/downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a>  (<span>Platine Batteur_sldprt.prt)</span></p>
+<p>              <a href="/downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a>   (<span>Flipper_sldprt.prt)</span></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_p1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p2.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p3.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p4.stl">模型4</a> <!-- 第四題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p5.stl">模型5</a> <!-- 第五題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p6.stl">模型6</a> <!-- 第六題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p7.stl">模型7</a> <!-- 第七題的模型 --></div>
@@ -1250,7 +1262,8 @@ function initModelParts() {
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
 <p></p>
-<p></p><h3>W11影片連結</h3>
+<p></p>
+<h3>W11影片連結</h3>
 <p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe></p>
 <p>Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe></p>
 <p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
@@ -1354,11 +1367,13 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h2>W12_ch</h2>
+</script>
+<h2>W12_ch</h2>
 <p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
 <p></p>
+<h2>W13</h2>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
