--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1657,6 +1657,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>HW3 自評分數:</p>
 <p style="padding-left: 30px;">完成上述流程後, 請將 HW3 自評分數輸入 cad2024 自評表單中.</p>
 <h3>w16_exam2</h3>
+<p>零件檔案:<a href="/downloads/HW-.zip">w16_exam2</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_w16_part1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_w16_part4.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_w16_part6.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_w16_part5.stl">模型4</a> <!-- 第四題的模型 --></div>
