--- a/config/content.htm
+++ b/config/content.htm
@@ -1674,7 +1674,7 @@ function createModelPart(index, url) {
             <canvas height="300" id="cv${index}" style="border: 1px solid; width: 100%;"></canvas>
         </div>
 
-        <div style="width: 100%; height: 70px; border: 1px solid; margin-bottom: 20px;">
+        <div style="width: 400; height: 300; border: 1px solid; margin-bottom: 20px;">
             Model Color:<input id="mdlClr${index}" onchange="changeOption${index}('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40">
             Back Color1:<input id="bckClr${index}_1" onchange="changeOption${index}('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color">
             Back Color2:<input id="bckClr${index}_2" onchange="changeOption${index}('BackgroundColor2',this.value)" type="color"><br>
