W15上傳模擬練習

--- a/config/content.htm
+++ b/config/content.htm
@@ -1376,7 +1376,9 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>W13</h2>
 <p>利用CoppelaSim Edu旋轉</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2p4BjkeoMdo" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - 旋轉影片:41223131" width="666"></iframe></p>
-<h1>HW1</h1>
+<h2>W15</h2>
+<p>利用程式模擬coppeliaSim的練習</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/osk116KSjHg" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - W15: 41223131" width="560"></iframe></p><h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
@@ -1753,7 +1755,8 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </p>
 <!-- 影片連結 -->
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wa3kw0T_JD8" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam2: 41223131-1" width="560"></iframe><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3-BlPIupcU" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam2: 41223131-2" width="560"></iframe><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2Y8I3qzXCvo" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam1: 41223131-3" width="560"></iframe></p><h1>HW4</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wa3kw0T_JD8" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam2: 41223131-1" width="560"></iframe><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3-BlPIupcU" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam2: 41223131-2" width="560"></iframe><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2Y8I3qzXCvo" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam1: 41223131-3" width="560"></iframe></p>
+<h1>HW4</h1>
 <p>Homework 4 (20%):</p>
 <p style="padding-left: 30px;">建立 <a href="https://mde.tw/cad2024/content/Quadruped.html">Dingo 機器狗</a>控制系統設計模擬場景</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecycu/DingoQuadruped">https://github.com/mdecycu/DingoQuadruped</a></p>
