--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1376,6 +1376,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>W13</h2>
 <p>利用CoppelaSim Edu旋轉</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2p4BjkeoMdo" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - 旋轉影片:41223131" width="666"></iframe></p>
+<h2>W15</h2>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
@@ -1752,7 +1753,9 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
 </p>
 <!-- 影片連結 -->
-<p></p><h1>HW4</h1>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wa3kw0T_JD8" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam2: 41223131-1" width="560"></iframe><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3-BlPIupcU" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam2: 41223131-2" width="560"></iframe><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2Y8I3qzXCvo" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam1: 41223131-3" width="560"></iframe></p>
+<h1>HW4</h1>
 <p>Homework 4 (20%):</p>
 <p style="padding-left: 30px;">建立 <a href="https://mde.tw/cad2024/content/Quadruped.html">Dingo 機器狗</a>控制系統設計模擬場景</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecycu/DingoQuadruped">https://github.com/mdecycu/DingoQuadruped</a></p>
