W16_exam3沒程式的控制

--- a/config/content.htm
+++ b/config/content.htm
@@ -1379,7 +1379,8 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>W14</h2>
 <p><em><strong>1.</strong></em><span>利用 STL 檔案</span><span>建立 CoppeliaSim 模擬場景</span><span>的過程：</span></p>
 <p><span>半成品閃退問題</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ktpAQnj2rPI" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w14: 41223131" width="560"></iframe></p><h2>W15</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ktpAQnj2rPI" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w14: 41223131" width="560"></iframe></p>
+<h2>W15</h2>
 <p>利用程式模擬coppeliaSim的練習</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/osk116KSjHg" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - W15: 41223131" width="560"></iframe></p>
 <h1>HW1</h1>
@@ -1779,7 +1780,9 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>建立模擬場景操作過程影片如下:</p>
 <p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
 <p style="padding-left: 30px;">所完成的模擬場景與控制程式檔案下載</p>
-<h1>Final Report</h1>
+<h3>W16_exam3</h3>
+<p>沒程式的控制</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/y163RNbWG6k" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam3: 41223131" width="560"></iframe></p><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (30%)</p>
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;">......</p>
