--- a/content/Final Report.html
+++ b/content/Final Report.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='W11影片連結.html'>W11影片連結</a><li><a href='w11組合影片.html'>w11組合影片</a></li></ul><li><a href='W12_ch.html'>W12_ch</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10NX.html'>w10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li class='has-children'><a href='HW2_Exam.html'>HW2_Exam</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></li></ul></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='HW3_Exam.html'>HW3_Exam</a><ul class='dropdown'><li><a href='w16_exam2.html'>w16_exam2</a></li></li></ul></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='W11影片連結.html'>W11影片連結</a><li><a href='w11組合影片.html'>w11組合影片</a></li></ul><li><a href='W12_ch.html'>W12_ch</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10NX.html'>w10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li class='has-children'><a href='HW2_Exam.html'>HW2_Exam</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></li></ul></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='HW3_Exam.html'>HW3_Exam</a><ul class='dropdown'><li><a href='w16_exam2.html'>w16_exam2</a></li></li></ul></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li class='has-children'><a href='HW4_Exam.html'>HW4_Exam</a><ul class='dropdown'><li><a href='W16_exam3.html'>W16_exam3</a></li></li></ul></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW4_Exam << <a href='HW4_Exam.html'>Previous</a> <br /><h1>Final Report</h1>
+    <div id="tipue_search_content">W16_exam3 << <a href='W16_exam3.html'>Previous</a> <br /><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (30%)</p>
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;">......</p>
@@ -150,7 +150,7 @@ img.add_border {
 <p>電腦輔助設計與實習課程總結心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末報告自評成績:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cad2024 自評表單中.</p><br />HW4_Exam << <a href='HW4_Exam.html'>Previous</a> </div>
+<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cad2024 自評表單中.</p><br />W16_exam3 << <a href='W16_exam3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
