--- a/content/W16_exam3.html
+++ b/content/W16_exam3.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">HW4_Exam << <a href='HW4_Exam.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>W16_exam3</h1>
 <p>沒程式的控制</p>
+<p><a href="./../downloads/41223131_w16_exam3.zip">41223131_w16_exam3.zip</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/y163RNbWG6k" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam3: 41223131" width="560"></iframe></p><br />HW4_Exam << <a href='HW4_Exam.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report</div>
         
     <!-- footer -->
