--- a/config/content.htm
+++ b/config/content.htm
@@ -1377,6 +1377,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>利用CoppelaSim Edu旋轉</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2p4BjkeoMdo" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - 旋轉影片:41223131" width="666"></iframe></p>
 <h2>W14</h2>
+<p>檔案連結:<a href="/downloads/41223131_w14.ttt.zip">/downloads/41223131_w14.ttt.zip</a></p>
 <p><em><strong>1.</strong></em><span>利用 STL 檔案</span><span>建立 CoppeliaSim 模擬場景</span><span>的過程：</span></p>
 <p><span>半成品閃退問題</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ktpAQnj2rPI" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w14: 41223131" width="560"></iframe></p>
